@startuml US10-DM
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0

hide circle
hide methods

class Journalist {
    name
    email
}

class "Political Agent" as PoliticalAgent {
    name
    email
    nationalIdentityCard
    taxIdentificationNumber
    mandateStart
    mandateEnd
}

class "Declaration of Interests" as Declaration {
    id
    submissionDate
}

enum DeclarationStatus {
    PENDING
    VALIDATED
    REJECTED
}

enum DeclarationType {
    INITIAL
    REGULAR
    EXCEPTIONAL
}

class Income {
    amount
    source
    date
}

class SubsidyEntry {
    amount
    description
    date
}

Journalist "*" -- "*" PoliticalAgent : analyses income of >

PoliticalAgent "1" -- "*" Declaration : submits >

Declaration "*" -- "1" DeclarationType : has >
Declaration "*" -- "1" DeclarationStatus : has >

Declaration "1" *-- "*" Income : includes >
Declaration "1" *-- "*" SubsidyEntry : includes >

note bottom of Declaration
    US10 considers only VALIDATED declarations
    within the requested period; the income
    evolution is computed from the declared
    incomes and subsidies over time.
end note

@enduml
